--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ a {
 }
 
 .main-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  position: relative;
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
@@ -30,7 +34,6 @@ a {
 
 .header-inner {
   max-width: 1440px;
-  padding: 0 50px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -159,6 +162,16 @@ a {
   line-height: 1.6;
   color: #666;
   margin: 0;
+}
+
+.photo {
+  width: 487px;
+  margin-top: 100px;
+  margin-left: 50px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 1;
+  flex: 0 0 auto;
 }
 
 .cta-button-wrapper {
@@ -691,7 +704,7 @@ a {
 
   .main-content {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
     gap: 20px;
     padding: 0 20px;
@@ -702,6 +715,16 @@ a {
     align-items: left;
     margin-top: 40px;
     padding-left: 20px;
+  }
+
+  .photo {
+  width: 292px;
+  margin-top: 20px;
+  margin-left: 120px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 1;
+  flex: 0 0 auto;
   }
 
   .content-tagline {
@@ -866,7 +889,7 @@ a {
 
   .main-content {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
     gap: 20px;
     padding: 0 15px;
@@ -877,6 +900,15 @@ a {
     align-items: left;
     margin-top: 40px;
     padding-left: 15px;
+  }
+
+  .photo {
+    width: 250px;
+    margin: 44px 0 0 20px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    position: relative;
+    z-index: 1;
+    flex: 0 0 auto;
   }
 
   .content-tagline {
@@ -890,7 +922,7 @@ a {
   }
 
   .content-description {
-    font-size: 20px;
+    font-size: 17px;
     line-height: 1.5;
   }
 
@@ -1068,6 +1100,16 @@ a {
     align-items: center;
     margin-top: 40px;
     padding-left: 15px;
+  }
+
+  .photo {
+    width: 350px;
+    margin-top: 50px;
+    margin-left: 30px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    position: relative;
+    z-index: 1;
+    flex: 0 0 auto;
   }
 
   .content-tagline {
